Removed some commands. Provide --enable-native-access=ALL-UNNAMED when building to prevent warning message when starting wqce.